@@ -1,3 +1,8 @@
+2007-07-04  Samuel Thibault  <samuel.thibault@ens-lyon.org>
+
+	* i386/intel/pmap.c (pmap_enter): Use INTEL_PTE_NCACHE|INTEL_PTE_WTHRU
+	when cpu >= 486 and physical address is after memory end.
+
 2007-06-23  Samuel Thibault  <samuel.thibault@ens-lyon.org>
 
 	* i386/i386/trap.c (user_trap): Read faulting linear address before
